Fixed tooltip hidden by containing element
This change will no longer hide overflow in the profile "about" area when it is collapsed. No adverse effects were observed in testing, but watch for any issues that come from this.

--- a/common/common.scss
+++ b/common/common.scss
@@ -176,6 +176,9 @@
         left: -8px;
     }
 }
+.user-main .collapsed-info.about {
+   overflow: initial;
+}
 .user-main .about .details {
     padding: 15px 15px 4px 15px;
 }
